# ZFGC

./: CMakeLists.txt  CMakeSettings.json
ZFGC/: CMakeLists.txt  ZFGC.cpp  ZFGC.h  configs.h
ZFGC/Common/: BigInteger.cpp  BigInteger.h  RSA.cpp  RSA.h
ZFGC/OT/: OTBase.h
ZFGC/Tests/: CMakeLists.txt  Test_BigInteger.cpp  Test_RSA.cpp
